--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+	<meta name='viewport' , content='initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width'>
+</head>
 <body style="margin: 0; padding: 0; border: 0">
 	<iframe src="https://daily.atadi.vn/?iframe_user_slug=vac2yb" style="position: fixed; height: 100%; width: 100%; border: 0;" frameborder="0"></iframe>
 </body>
